--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Kids School</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <div class="logo">
+          <img src="./assets/logo.png" alt="Logo Pic" />
+        </div>
+        <nav>
+          <a href="#" class="orange">Home</a>
+          <a href="#" class="sky-blue">About</a>
+          <a href="#" class="paste-blue">Facilities</a>
+          <a href="#" class="purple">Admission</a>
+        </nav>
+        <div>
+          <button class="btn">Contact</button>
+        </div>
+      </header>
+      <main></main>
+    </div>
+  </body>
 </html>
