--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="logo">
           <img src="./assets/logo.png" alt="Logo Pic" />
         </div>
+        <span class="mobile__menu"></span>
         <nav>
           <a href="#" class="orange">Home</a>
           <a href="#" class="sky-blue">About</a>
@@ -22,7 +23,24 @@
           <button class="btn">Contact</button>
         </div>
       </header>
-      <main></main>
+      <main>
+        <section class="hero">
+          <div class="content">
+            <h1 class="primary-header">
+              <span class="orange">Empowering</span> students from small age
+              <span class="sky-blue">towards vision</span>
+            </h1>
+            <p class="hero-text">
+              With the courage, Confidence, Creativity and Compassion to make
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+            <button class="btn">Enroll Now</button>
+          </div>
+          <div class="hero__img">
+            <img src="./assets/hero-kids.png" alt="kids pic" />
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
