--- a/index.html
+++ b/index.html
@@ -40,7 +40,155 @@
             <img src="./assets/hero-kids.png" alt="kids pic" />
           </div>
         </section>
+        <section class="courses">
+          <h2 class="secondary-header">Standard Curriculum</h2>
+          <div class="cards__container">
+            <div class="card card-1">
+              <img src="./assets/kinder.png" alt="card 1 pic" />
+              <h3>Kinder (3-6) Years</h3>
+              <p>
+                Every day is an adventure for curious little minds, where play
+                sparks learning and imagination takes flight.
+              </p>
+              <button class="darkBlue">Read More</button>
+            </div>
+            <div class="card card-2">
+              <img src="./assets/elementary.png" alt="card 2 pic" />
+              <h3>Elementary School</h3>
+              <p>
+                Building strong foundations, where curiosity meets knowledge and
+                friendships grow.
+              </p>
+              <button class="darkOrange">Read More</button>
+            </div>
+            <div class="card card-3">
+              <img src="./assets/middle.png" alt="card 3 pic" />
+              <h3>Middle (10-16) Years</h3>
+              <p>
+                Shaping identities and exploring possibilities, these are the
+                years of growth, discovery, and resilience.
+              </p>
+              <button class="darkPurple">Read More</button>
+            </div>
+          </div>
+          <div class="chevron">
+            <div class="circle circle-1"></div>
+            <div class="circle circle-2"></div>
+          </div>
+        </section>
+        <section class="gallery">
+          <h2 class="secondary-header">Our Stories</h2>
+          <div class="gallery__container">
+            <!-- Gallery Card One -->
+            <div class="gallery-card">
+              <img src="./assets/story-1.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn bright-teal">
+                  November 19, 2019
+                </button>
+                <h3>A fun toddler coloring training on classroom</h3>
+                <p>
+                  Beautiful branding for changes by Never Now in Australia.
+                  changes is a platform for open discussion in an inclusive and
+                  collaborative environment, providing the...
+                </p>
+              </div>
+            </div>
+            <!-- Gallery Card Two -->
+
+            <div class="gallery-card">
+              <img src="./assets/story-2.png" alt="girls playing" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn indigo">November 19, 2019</button>
+                <h3>Find out if a school fits the family’s needs</h3>
+              </div>
+            </div>
+
+            <!-- Gallery Card Three -->
+            <div class="gallery-card">
+              <img src="./assets/story-3.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn olive">November 19, 2019</button>
+                <h3>Summer math & literacy centres for kids</h3>
+              </div>
+            </div>
+            <div class="gallery-card hide">
+              <img src="./assets/story-3.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn olive">November 19, 2019</button>
+                <h3>Summer math & literacy centres for kids</h3>
+              </div>
+            </div>
+            <div class="gallery-card hide">
+              <img src="./assets/story-3.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn olive">November 19, 2019</button>
+                <h3>Summer math & literacy centres for kids</h3>
+              </div>
+            </div>
+            <!-- Gallery Card Four -->
+            <div class="gallery-card">
+              <img src="./assets/story-4.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn olive">September 10, 2019</button>
+                <h3>Classroom management techniques for new tutors</h3>
+              </div>
+            </div>
+            <!--         Gallery Card Five -->
+            <div class="gallery-card">
+              <img src="./assets/story-5.png" alt="girl holding a kid" />
+
+              <div class="gallery-content">
+                <button class="gallery-btn olive">July 19, 2019</button>
+                <h3>Conversation rhymes improve kids listening</h3>
+              </div>
+            </div>
+          </div>
+          <div class="galleryBtn">
+            <button class="btn black">View All</button>
+          </div>
+        </section>
       </main>
     </div>
+    <footer class="footer">
+      <div class="footer-content">
+      <div class="name">
+        <img src="./assets/logo.png" alt="logos" />
+       
+          <h2>Kids Education</h2>
+          </div>
+          <p>
+            A place where little hearts and curious minds grow, learning through
+            fun every day Where every child’s potential shines, and each step
+            leads to a brighter tomorrow
+          </p>
+        </div>
+      </div>
+      <nav class="footer-nav">
+        <h3>About School</h3>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Facilities</li>
+          <li>Admission</li>
+        </ul>
+      </nav>
+      <div class="socials">
+        <h3>Keep In Touch</h3>
+
+        <div class="social__links">
+          <a href="#"><img src="./assets/fb.png" /></a>
+          <a href="#"><img src="./assets/dribble.png" /></a>
+          <a href="#"><img src="./assets/twitter.png" /></a>
+          <a href="#"><img src="./assets/google+.png" /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
