--- a/index.html
+++ b/index.html
@@ -7,76 +7,76 @@
     <title>Kids School</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="logo">
-          <img src="./assets/logo.png" alt="Logo Pic" />
+    <header class="container" id="top">
+      <div class="logo">
+        <img src="./assets/logo.png" alt="Logo Pic" />
+      </div>
+      <span class="mobile__menu"></span>
+      <nav>
+        <a href="#" class="orange">Home</a>
+        <a href="#" class="sky-blue">About</a>
+        <a href="#" class="paste-blue">Facilities</a>
+        <a href="#" class="purple">Admission</a>
+      </nav>
+      <div>
+        <button class="btn">Contact</button>
+      </div>
+    </header>
+    <main>
+      <section class="hero container">
+        <div class="content">
+          <h1 class="primary-header">
+            <span class="orange">Empowering</span> students from small age
+            <span class="sky-blue">towards vision</span>
+          </h1>
+          <p class="hero-text">
+            With the courage, Confidence, Creativity and Compassion to make
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="btn">Enroll Now</button>
         </div>
-        <span class="mobile__menu"></span>
-        <nav>
-          <a href="#" class="orange">Home</a>
-          <a href="#" class="sky-blue">About</a>
-          <a href="#" class="paste-blue">Facilities</a>
-          <a href="#" class="purple">Admission</a>
-        </nav>
-        <div>
-          <button class="btn">Contact</button>
+        <div class="hero__img">
+          <img src="./assets/hero-kids.png" alt="kids pic" />
         </div>
-      </header>
-      <main>
-        <section class="hero">
-          <div class="content">
-            <h1 class="primary-header">
-              <span class="orange">Empowering</span> students from small age
-              <span class="sky-blue">towards vision</span>
-            </h1>
-            <p class="hero-text">
-              With the courage, Confidence, Creativity and Compassion to make
-              their Unique Contribution in a Diverse and Dynamic World.
+      </section>
+      <section class="courses container">
+        <h2 class="secondary-header">Standard Curriculum</h2>
+        <div class="cards__container">
+          <div class="card card-1">
+            <img src="./assets/kinder.png" alt="card 1 pic" />
+            <h3>Kinder (3-6) Years</h3>
+            <p>
+              Every day is an adventure for curious little minds, where play
+              sparks learning and imagination takes flight.
             </p>
-            <button class="btn">Enroll Now</button>
+            <button class="darkBlue">Read More</button>
           </div>
-          <div class="hero__img">
-            <img src="./assets/hero-kids.png" alt="kids pic" />
+          <div class="card card-2">
+            <img src="./assets/elementary.png" alt="card 2 pic" />
+            <h3>Elementary School</h3>
+            <p>
+              Building strong foundations, where curiosity meets knowledge and
+              friendships grow.
+            </p>
+            <button class="darkOrange">Read More</button>
           </div>
-        </section>
-        <section class="courses">
-          <h2 class="secondary-header">Standard Curriculum</h2>
-          <div class="cards__container">
-            <div class="card card-1">
-              <img src="./assets/kinder.png" alt="card 1 pic" />
-              <h3>Kinder (3-6) Years</h3>
-              <p>
-                Every day is an adventure for curious little minds, where play
-                sparks learning and imagination takes flight.
-              </p>
-              <button class="darkBlue">Read More</button>
-            </div>
-            <div class="card card-2">
-              <img src="./assets/elementary.png" alt="card 2 pic" />
-              <h3>Elementary School</h3>
-              <p>
-                Building strong foundations, where curiosity meets knowledge and
-                friendships grow.
-              </p>
-              <button class="darkOrange">Read More</button>
-            </div>
-            <div class="card card-3">
-              <img src="./assets/middle.png" alt="card 3 pic" />
-              <h3>Middle (10-16) Years</h3>
-              <p>
-                Shaping identities and exploring possibilities, these are the
-                years of growth, discovery, and resilience.
-              </p>
-              <button class="darkPurple">Read More</button>
-            </div>
+          <div class="card card-3">
+            <img src="./assets/middle.png" alt="card 3 pic" />
+            <h3>Middle (10-16) Years</h3>
+            <p>
+              Shaping identities and exploring possibilities, these are the
+              years of growth, discovery, and resilience.
+            </p>
+            <button class="darkPurple">Read More</button>
           </div>
-          <div class="chevron">
-            <div class="circle circle-1"></div>
-            <div class="circle circle-2"></div>
-          </div>
-        </section>
-        <section class="gallery">
+        </div>
+        <div class="chevron">
+          <div class="circle circle-1"></div>
+          <div class="circle circle-2"></div>
+        </div>
+      </section>
+      <div class="gradient">
+        <section class="gallery container">
           <h2 class="secondary-header">Our Stories</h2>
           <div class="gallery__container">
             <!-- Gallery Card One -->
@@ -84,7 +84,7 @@
               <img src="./assets/story-1.png" alt="girl holding a kid" />
 
               <div class="gallery-content">
-                <button class="gallery-btn bright-teal">
+                <button class="gallery-btn bright-teal top">
                   November 19, 2019
                 </button>
                 <h3>A fun toddler coloring training on classroom</h3>
@@ -154,22 +154,23 @@
             <button class="btn black">View All</button>
           </div>
         </section>
-      </main>
-    </div>
+      </div>
+    </main>
+
     <footer class="footer">
       <div class="footer-content">
-      <div class="name">
-        <img src="./assets/logo.png" alt="logos" />
-       
+        <div class="name">
+          <img src="./assets/logo.png" alt="logos" />
+
           <h2>Kids Education</h2>
-          </div>
-          <p>
-            A place where little hearts and curious minds grow, learning through
-            fun every day Where every child’s potential shines, and each step
-            leads to a brighter tomorrow
-          </p>
         </div>
+        <p>
+          A place where little hearts and curious minds grow, learning through
+          fun every day Where every child’s potential shines, and each step
+          leads to a brighter tomorrow
+        </p>
       </div>
+
       <nav class="footer-nav">
         <h3>About School</h3>
         <ul>
