--- a/index.html
+++ b/index.html
@@ -191,5 +191,6 @@
         </div>
       </div>
     </footer>
+    <marquee> <span>Welcome to the kids Education</span></marquee>
   </body>
 </html>
